# com2009_team65_2025

./: .gitignore  CMakeLists.txt  README.md  hello.md  init_pkg.sh  lottie_notes.txt  package.xml  parta_submission_receipt.md  partb_submission_receipt.md  tomi_task3_notes.txt
action/: AvoidingObstacles.action  Explore.action  Task3Forward.action
install/: local_setup.sh  setup.sh
install/com2009_team65_2025/lib/com2009_team65_2025/: avoiding_obstacles_client.py  avoiding_obstacles_server.py  cpp_executable  explore_forward_client.py  explore_forward_server.py  velocity_controller.py
install/com2009_team65_2025/share/com2009_team65_2025/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/com2009_team65_2025/share/com2009_team65_2025/action/: AvoidingObstacles.action  AvoidingObstacles.idl  ExploreForward.action  ExploreForward.idl
install/com2009_team65_2025/share/com2009_team65_2025/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  (+16 more)
launch/: task1.launch.py  task2.launch.py  task3.launch.py
log/: latest_build
maps/: arena_map.pgm  arena_map.yaml
scripts/: beacon_detector.py  exploration_controller.py  explore_forward_client.py  explore_forward_server.py  explore_server.py  explorer.py  map_processor.py  object_detection.py  obstacle_avoidance.py  slam_mapper.py  test.py  velocity_controller.py
scripts/install/: local_setup.sh  setup.sh
scripts/log/: latest_build
srv/: ControlSharingReq.srv
(+60 files in other folders)
